--- a/index.html
+++ b/index.html
@@ -11,22 +11,168 @@
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="index.html">
-            <img src="img/logo.png" alt="Logo de la empresa.">
+            <img class="header__logo" src="img/logo.png" alt="Logo de la empresa.">
 
         </a>
-    </header>
+    </header> 
 
-    <nav>
-        <a href="nosotros.html">Inicio</a>
-        <a href="index.html">Nosotros</a>
+    <nav class="navegacion">
+        <a class= "navegacion__enlace navegacion__enlace--activo"  href="index.html">Tienda</a>
+        <a class= "navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
 
-    <main>
-        <h1>Nuestro Productos</h1>
+    <main class="contenedor">
+        <h1>Nuestros Productos</h1>
+        <div class="grid">
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/1.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Angular</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">React</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Redux</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Node</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Sass</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Html</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GitHub</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Bulma</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">TypeScript</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">J.Script</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQl</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="camiseta">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">wordpress</p>
+                        <p class=".producto__precio">$20</p>
+                    </div>
+                </a>
+
+            </div> <!--Fin de la clase producto-->
+        </div>
 
 
     </main>
+
+    <footer class="footer">
+        <p class="footer__texto" >Frontend Store. Todos los derechos reservados 2024.</p>
+    </footer>
 </body>
 </html>
