--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img class="producto__imagen" src="img/1.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">VueJs</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -41,7 +41,7 @@
                     <img class="producto__imagen" src="img/2.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Angular</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -51,7 +51,7 @@
                     <img class="producto__imagen" src="img/3.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">React</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -61,7 +61,7 @@
                     <img class="producto__imagen" src="img/4.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Redux</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -71,7 +71,7 @@
                     <img class="producto__imagen" src="img/5.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Node</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -81,7 +81,7 @@
                     <img class="producto__imagen" src="img/6.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Sass</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -91,7 +91,7 @@
                     <img class="producto__imagen" src="img/7.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Html</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -101,7 +101,7 @@
                     <img class="producto__imagen" src="img/8.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">GitHub</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -111,7 +111,7 @@
                     <img class="producto__imagen" src="img/9.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Bulma</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -121,7 +121,7 @@
                     <img class="producto__imagen" src="img/10.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">TypeScript</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -131,7 +131,7 @@
                     <img class="producto__imagen" src="img/11.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Drupal</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -141,7 +141,7 @@
                     <img class="producto__imagen" src="img/12.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">J.Script</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -151,7 +151,7 @@
                     <img class="producto__imagen" src="img/13.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">GraphQl</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
@@ -161,11 +161,13 @@
                     <img class="producto__imagen" src="img/14.jpg" alt="camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">wordpress</p>
-                        <p class=".producto__precio">$20</p>
+                        <p class="producto__precio">$20</p>
                     </div>
                 </a>
 
             </div> <!--Fin de la clase producto-->
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
         </div>
 
 
