practica html, css de curso finalizada fronten st

--- a/nosotros.html
+++ b/nosotros.html
@@ -25,9 +25,63 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eum molestiae odit explicabo sunt. Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto, iure laudantium id vero vel deleniti!
+                </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eum molestiae odit explicabo sunt. Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto, iure laudantium id vero vel deleniti!
+                </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eum molestiae odit explicabo sunt. Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto, iure laudantium id vero vel deleniti!
+                </p>
+            </div>
+
+            <div class="nosotros__imagen">
+                <img src="img/nosotros.jpg" alt="Fotografia representativa de la empresa.">
+            </div>
 
 
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">Porqué comprar con nosotros?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="icono">
+
+                <h3 class="bloque__titulo">El mejor precio</h3>
+
+                <p>Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto,</p>
+            </div><!--fin de bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="icono">
+
+                <h3 class="bloque__titulo">Para Devs</h3>
+
+                <p>Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto,</p>
+            </div><!--fin de bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="icono">
+
+                <h3 class="bloque__titulo">Envios gratis</h3>
+
+                <p>Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto,</p>
+            </div><!--fin de bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="icono">
+
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+
+                <p>Aspernatur esse et suscipit voluptate. Dolores, rem tenetur. Voluptas iusto,</p>
+            </div><!--fin de bloque-->
+
+        </div>
+
+    </section>
     <footer class="footer">
         <p class="footer__texto" >Frontend Store. Todos los derechos reservados 2024.</p>
     </footer>
