--- a/producto.html
+++ b/producto.html
@@ -24,7 +24,29 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Producto</h1>
+        <h1>React Js</h1>
+
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="Camisa React.">
+        
+
+        <div class="camisa__contenido">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus veniam quisquam blanditiis, similique ea unde sit qLorem ipsum dolor sit amet consectetur, adipisicing elit. Natus veniam quisquam blanditiis, similique ea unde sit q</p>
+
+            <form class="formulario">
+                <select class="formulario__campo" id="talle" name="talle">
+                  <option disabled selected value="">--Seleccionar Talle--</option>
+                  <option value="chica">Chica</option>
+                  <option value="mediana">Mediana</option>
+                  <option value="grande">Grande</option>
+                  <option value="extra">Extra</option>
+                </select>
+                <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                <input class="formulario__submit" type="submit" value="Agregar a carrito">
+            </form>
+        </div>      
+              
+        </div>
 
 
     </main>
